<resources>
    <string name="app_name">PlanYourTrip</string>
    <string name="src_hint">Departure Airport</string>
    <string name="dst_hint">Arrival Airport</string>
    <string name="date_hint">Jan 12, 2017</string>
    <string name="search_flight">Search for Flights</string>
    <string name="google_maps_key">AIzaSyBbTN4CKjj7kTxg8z3bZGqplpYBddHcIlA</string>
    <string name="hotel_location">City</string>
    <string name="hotel_check_in">Check in</string>
    <string name="hotel_check_out">Check out</string>
</resources>
