<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hotel_location">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hotel_location"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/checkin_ll"
        android:layout_below="@+id/hotel_location"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_check_in"/>

        <DatePicker
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></DatePicker>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/checkout_ll"
        android:layout_below="@+id/hotel_location"
        android:layout_toRightOf="@+id/checkin_ll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_check_out"/>

        <DatePicker
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></DatePicker>
    </LinearLayout>

</RelativeLayout>