<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/src"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/src_img"
            android:visibility="visible"
            android:layout_width="@dimen/activity_flight_margin"
            android:layout_height="@dimen/activity_flight_margin"
            android:layout_centerVertical="true"
            android:background="@mipmap/departure"
            />
        <EditText
            android:id="@+id/source"
            android:visibility="visible"
            android:layout_marginLeft="@dimen/activity_flight_left_margin"
            android:layout_toRightOf="@id/src_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/src_hint"
            android:inputType="text"
            android:layout_centerInParent="true"
            android:textSize="@dimen/activity_flight_margin"
            android:imeOptions="actionNext"
            android:maxLines="1"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dst"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_flight_margin"
        android:layout_below="@id/src"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/dst_img"
            android:layout_width="@dimen/activity_flight_margin"
            android:layout_height="@dimen/activity_flight_margin"
            android:layout_centerVertical="true"
            android:visibility="visible"
            android:background="@mipmap/arrival"
            />
        <EditText
            android:id="@+id/destination"
            android:visibility="visible"
            android:layout_marginLeft="@dimen/activity_flight_left_margin"
            android:layout_toRightOf="@id/dst_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dst_hint"
            android:inputType="text"
            android:layout_centerInParent="true"
            android:textSize="@dimen/activity_flight_margin"
            android:imeOptions="actionNext"
            android:maxLines="1"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/date"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_flight_margin"
        android:layout_below="@id/dst"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/date_img"
            android:layout_width="@dimen/activity_flight_margin"
            android:layout_height="@dimen/activity_flight_margin"
            android:layout_centerVertical="true"
            android:background="@mipmap/date"
            />
        <TextView
            android:id="@+id/selcted_date"
            android:visibility="visible"
            android:layout_marginLeft="@dimen/activity_flight_left_margin"
            android:layout_toRightOf="@id/date_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            android:inputType="text"
            android:onClick="showDatePickerDialog"
            android:layout_centerInParent="true"
            android:textSize="@dimen/activity_flight_margin"
            android:imeOptions="actionNext"
            android:maxLines="1"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/search"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_flight"
        android:background="@color/colorPrimary"
        android:textColor="@color/cardview_light_background"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textAlignment="center"/>

</RelativeLayout>